@@ -13,6 +13,7 @@ import miu.edu.mpp.app.repository.ArticleRepository;
 import miu.edu.mpp.app.repository.TagRepository;
 import miu.edu.mpp.app.repository.UserRepository;
 import miu.edu.mpp.app.repository.spec.ArticleSpecifications;
+import miu.edu.mpp.app.security.CurrentUser;
 import miu.edu.mpp.app.security.JwtUtil;
 import miu.edu.mpp.app.service.ArticleService;
 import miu.edu.mpp.app.util.SlugUtil;
@@ -20,15 +21,14 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.server.ResponseStatusException;
 
-import javax.management.Query;
 import javax.persistence.EntityManager;
-import javax.persistence.TypedQuery;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
 @Service
@@ -44,7 +44,7 @@ public class ArticleServiceImpl implements ArticleService {
 
     @Override
     @Transactional
-    public ArticleCreateResponse createArticle(ArticleCreateRequest req) {
+    public ArticleCreateResponse createArticle(CurrentUser userLogin, ArticleCreateRequest req) {
 
         // ---------- Tags ----------
         String tagsConcatenados = Optional.ofNullable(req.getTagList())
@@ -75,7 +75,7 @@ public class ArticleServiceImpl implements ArticleService {
                 .collect(Collectors.toList());
         // ---------- Author ----------
         User author = userRepository
-                .findById(1L)
+                .findById(userLogin.getId())
                 .orElseThrow(() -> new RuntimeException("Author not found"));
         // ---------- Article ----------
         Article article = new Article();
@@ -116,7 +116,7 @@ public class ArticleServiceImpl implements ArticleService {
                 .body(article.getBody())
                 .createdAt(article.getCreatedAt())
                 .updatedAt(article.getUpdatedAt())
-                .tagList(tags.stream().map(Tag::getName).collect(Collectors.toList()))
+                .tagList(Arrays.stream(article.getTagList().split(",")).toList())
                 .favoritesCount(0)
                 .author(/* map principal author si aplica */ null)
                 .favorited(false)
@@ -180,10 +180,6 @@ public class ArticleServiceImpl implements ArticleService {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found"));
 
-//        Page<Article> articles = articleRepository.findArticlesByFollowedUsers(
-//                userId,
-//                PageRequest.of(offset / limit, limit, Sort.by(Sort.Direction.DESC, "createdAt"))
-//        );
         List<User> following = user.getFollowing();
         if (following.isEmpty()) {
             return new ArticleFeedResponse(List.of(), 0);
@@ -203,7 +199,7 @@ public class ArticleServiceImpl implements ArticleService {
                         .body(article.getBody())
                         .createdAt(article.getCreatedAt())
                         .updatedAt(article.getUpdatedAt())
-                        .tagList(article.getTags().stream().map(Tag::getName).toList())
+                        .tagList(Arrays.stream(article.getTagList().split(",")).toList())
                         .favoritesCount(article.getFavoritesCount())
 //                        .favoritesCount(article.getFavoritedBy() != null ? article.getFavoritedBy().size() : 0)
                         .author(toUserResponse(article.getAuthor()))
@@ -301,5 +297,62 @@ public class ArticleServiceImpl implements ArticleService {
         ArticleResponse response = toArticleResponse(article, false);
         return new ArticleWrapper(response);
     }
+
+    @Override
+    @Transactional(readOnly = true)
+    public ArticleDTOResponse<ArticleDto> getArticleBySlug(String slug, CurrentUser currentUser) {
+        Article article = articleRepository.findBySlug(slug)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Article not found"));
+
+        User author = article.getAuthor();
+
+        // current user following author's article?
+        boolean following = author.getFollowers().stream()
+                .anyMatch(f -> f.getId().equals(currentUser.getId()));
+
+        // does user favorite  articles?
+//        boolean favorited = favoriteRepository.existsByArticleIdAndUserId(article.getId(), currentUser.getId());
+
+        // Map comments to DTO
+//        List<CommentDto> comments = article.getComments().stream()
+//                .map(comment -> new CommentDto(
+//                        comment.getId(),
+//                        comment.getBody(),
+//                        comment.getCreatedAt(),
+//                        comment.getUpdatedAt(),
+//                        comment.getAuthor().getId()))
+//                .toList();
+
+        // Construir respuesta
+        AuthorDto authorDto = new AuthorDto(
+                author.getId(),
+                author.getUsername(),
+                author.getBio(),
+                author.getImage(),
+                following,
+                author.getEmail());
+
+        return new ArticleDTOResponse(ArticleDto.builder()
+                .id(article.getId())
+                .slug(article.getSlug())
+                .title(article.getTitle())
+                .description(article.getDescription())
+                .body(article.getBody())
+                .createdAt(article.getCreatedAt())
+                .updatedAt(article.getUpdatedAt())
+                .tagList(Arrays.stream(article.getTagList().split(",")).toList())
+                .author(authorDto)
+                .favoritesCount(article.getFavoritesCount())
+                .lockedAt(article.getLockedAt())
+                .lockedBy(null)
+//                .comments(comments)
+//                .favorited(favorited)
+                .authors(List.of())  // ← si tienes coautores, agrégalos aquí
+                .collaboratorList(List.of())
+                .islocked(article.getLockedAt() != null)
+                .build());
+    }
+
+
 
 }
